[package]
name = "puff"
authors = ["smokingplaya"]
repository = "https://github.com/smokingplaya/puff"
keywords = ["scripts", "yaml"]
version = "0.1.6"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
colored = "3.0.0"
dotenv = "0.15.0"
regex = "1.11.1"
serde = { version = "1.0.217", features = ["derive"] }
serde_yml = "0.0.12"
